# gcodekit6

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: BUG.md  CHANGE.md  TASK.md
.github/workflows/: README.md  ci.yml  harnesses.yml  ignored-harnesses.yml
.specify/memory/: constitution.md
crates/core/: Cargo.toml
crates/core/src/: async_streamer.rs  config.rs  device.rs  device_manager.rs  error.rs  job.rs  lib.rs  models.rs  persistence.rs  streamer.rs  streamer_worker.rs
crates/core/src/gcode/: mod.rs  parser.rs
crates/core/tests/: README.md  async_streamer_tests.rs  config_tests.rs  connect_device.rs  emergency_stop_timing.rs  integration_identify.rs  parser_tests.rs  perf_transport_latency.rs  persistence_tests.rs  streamer_ack_error_tests.rs  streamer_tests.rs  streamer_worker_tests.rs  websocket_integration.rs
crates/device-adapters/: Cargo.toml
crates/device-adapters/src/: async_network.rs  async_serial.rs  async_websocket.rs  lib.rs  network.rs  serial.rs  websocket_sync.rs
crates/device-adapters/tests/: connect_device.rs  emergency_stop.rs  handshake_timeout.rs  handshake_timeout_active.rs  network_discovery_tests.rs  network_tests.rs  serial_adapter_tests.rs  serial_listing_unit.rs  serial_tests.rs  stream_pause_resume.rs  timeout_tests.rs  transport_trait_tests.rs
crates/ui/: Cargo.toml  README.md  build.rs
crates/ui/src/: lib.rs  main.rs  slint_bindings.rs  ui.slint  ui_gen_real.rs  ui_generated.rs  ui_impl.rs
crates/ui/tests/: start_ui.rs  ui_connect_tests.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  logging.rs  settings.rs  storage.rs
crates/utils/tests/: logging_tests.rs  settings_tests.rs  storage_tests.rs
issues/: 001-websocket-transport.md  002-grbl-char-counting.md  003-arc-expander.md  004-visualizer-mvp.md  005-ui-wiring.md  006-macro-storage.md
specs/001-initial-plan/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-initial-plan/contracts/: adapter-design.md  device-connect-schema.json  network-device-connect-schema.json
tests/: connect_device.rs  emergency_stop.rs  stream_pause_resume.rs
tests/integration/: emergency_stop.rs  stream_pause_resume.rs
