[package]
name = "gcodekit_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
gcodekit_device_adapters = { path = "../device-adapters" }
gcodekit_utils = { path = "../utils" }
dirs-next = "2"
serde_json = "1.0"
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
[features]
async = ["gcodekit_device_adapters/async"]
[dev-dependencies]
tempfile = "3"
