[package]
name = "gcodekit_device_adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
async-trait = "0.1"
gcodekit_utils = { path = "../utils" }
tokio-tungstenite = { version = "0.20", optional = true }
tungstenite = { version = "0.20", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.23", optional = true }
futures-util = { version = "0.3", optional = true }
url = { version = "2", optional = true }

[features]
async = []
websocket = ["tokio-tungstenite", "tungstenite", "url"]
websocket-tls = ["tokio-native-tls", "tokio-rustls"]
websocket-full = ["tokio-tungstenite", "tungstenite", "futures-util"]
