[package]
name = "gcodekit_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.14.0", optional = true }
tracing = "0.1"
gcodekit_utils = { path = "../utils" }
gcodekit_core = { path = "../core" }

[features]
# Enable the Slint UI integration and generated-output support by default
# so local development picks up changes to `src/ui.slint` without extra
# flags. Developers can opt out by disabling default-features.
default = ["with-slint", "slint_generated"]
with-slint = ["slint"]

# Feature that indicates the slint generated code is available. When set
# along with `with-slint` the build script will attempt to run the
# slint generator if `SLINT_INCLUDE_GENERATED=1` is present.
slint_generated = []

[dev-dependencies]
wait-timeout = "0.2"
tempfile = "3"

[build-dependencies]
slint-build = "1.14.0"

